--- a/Frontend/RoadmapAI/src/views/LoginPage.css
+++ b/Frontend/RoadmapAI/src/views/LoginPage.css
@@ -1,31 +1,81 @@
-.login-container {
-  max-width: 300px;
-  margin: 0 auto;
-  padding: 20px;
+
+html, body, #app, .landing-page {
+  height: 100%;
+  margin: 0;
+}
+
+.landing-page {
+  min-height: 100vh;
+  background: linear-gradient(rgba(255,255,255,1) 73%, rgba(46,187,212,1) 100%);
+  display: flex;
+  align-items: center;
+}
+
+.loginBtn {
+  background: linear-gradient(#30D6F3, #2EBBD4);
+  border: none; 
+  color: white;
+  padding: 15px;
+  width: 100%;
+  text-align: center;
+  border-radius: 30px;
+  font-size: 18px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.loginBtn:hover {
+  background: linear-gradient(90deg, #2EBBD4, #30D6F3); 
+}
+
+* {
+  font-family: 'Poppins', sans-serif;
+}
+
+img {
+  border-radius: 10px;
+}
+
+.title {
+  font-weight: 800;
+  font-size: 90px;
+  line-height: 80px;
+  text-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);
+}
+
+.subtitle {
+  font-size: 20px;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
   border: 1px solid #ccc;
-  border-radius: 5px;
-}
-.form-group {
-  margin-bottom: 15px;
-}
-label {
-  display: block;
-  margin-bottom: 5px;
-}
-input {
+  border-radius: 15px;
+  padding: 15px;
   width: 100%;
-  padding: 8px;
-  box-sizing: border-box;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  
+  margin-bottom: 25px;
+  background: transparent;
 }
-button {
-  width: 100%;
-  padding: 10px;
-  background-color: #007bff;
-  color: #fff;
+
+.search-input {
   border: none;
-  border-radius: 5px;
-  cursor: pointer;
+  outline: none;
+  flex-grow: 1;
+  padding: 5px;
+  font-size: 16px;
 }
-button:hover {
-  background-color: #0056b3;
+
+.search-button {
+  background-color: #00bcd4;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  
 }
