--- a/Frontend/RoadmapAI/src/views/DashboardPage.css
+++ b/Frontend/RoadmapAI/src/views/DashboardPage.css
@@ -15,18 +15,42 @@
 
 .title{
     font-weight: 800;
-    font-size: 90px;
+    font-size: 60px;
     line-height: 80px;
     text-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);
+    text-align: center;
+}
+
+.subtitle{
+  text-align: center;
+  margin-top: 10px;
+  font-size: 30px;
+}
+
+.content{
+  text-align: center;
+  margin-top: 180px;
+  font-size: 20px;
+}
+
+.createbtn{
+  margin-top: 30px;
+  background: linear-gradient( #30D6F3, #2EBBD4);
+  border: none; 
+  color: white;
+  padding: 10px;
+  width: 180px;
+  text-align: center;
+  border-radius: 30px;
+  font-size: 12px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  
 }
 
 .success{
     color: #00bcd4;
 }
 
-.subtitle{
-    font-size: 20px;
-}
 
 
   .search-container {
