--- a/Frontend/RoadmapAI/src/views/DashboardPage.css
+++ b/Frontend/RoadmapAI/src/views/DashboardPage.css
@@ -2,7 +2,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.landing-page{
+.dashboard-page{
     min-height: 100vh;
   background: linear-gradient( rgba(255,255,255,1) 73%, rgba(46,187,212,1) 100%);
   padding-bottom: 20px;
@@ -50,65 +50,3 @@
 .success{
     color: #00bcd4;
 }
-
-
-
-  .search-container {
-    display: flex;
-    align-items: center;
-    border: 1px solid #ccc;
-    border-radius: 50px;
-    padding: 15px;
-    width: 100%;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  
-    margin-bottom: 25px;
-  }
-  
-  .search-input {
-    border: none;
-    outline: none;
-    flex-grow: 1;
-    padding: 5px;
-    font-size: 16px;
-    
-  }
-  
-  .search-button {
-    background-color: #00bcd4;
-    border: none;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    cursor: pointer;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  
-  }
-  
-  /* Optional: Add hover effect to the image */
-  .search-button:hover {
-    opacity: 0.8;
-  }
-
-  .suggested-topics {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    justify-content: center;
-  }
-
-  .topic-button {
-    border: 1px solid #ccc;
-    border-radius: 25px;
-    padding: 8px 15px;
-    background-color: white;
-    cursor: pointer;
-    transition: background-color 0.2s;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-  }
-
-  .topic-button:hover {
-    background-color: #f0f0f0;
-  }
