--- a/Frontend/RoadmapAI/src/views/DashboardPage.css
+++ b/Frontend/RoadmapAI/src/views/DashboardPage.css
@@ -33,6 +33,17 @@
   font-size: 20px;
 }
 
+.content2{
+  text-align: center;
+  margin-top: 100px;
+  font-size: 20px;
+}
+
+.card{
+  box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);
+}
+
+
 .createbtn{
   margin-top: 30px;
   background: linear-gradient( #30D6F3, #2EBBD4);
@@ -43,9 +54,27 @@
   text-align: center;
   border-radius: 30px;
   font-size: 12px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(97, 97, 97, 0.1);
 }
 
 .success{
     color: #00bcd4;
+}
+
+.card-title{
+  margin-top: 30px;
+}
+
+.card{
+  width: 100%;
+  height: auto;
+  box-shadow: 0 10px 15px hsla(0, 0%, 88%, 0.705);
+}
+
+.card-body{
+  margin: 30px;
+}
+
+.card-btn{
+  box-shadow: 0 5px 5px hsla(0, 0%, 88%, 0.705);
 }
