--- a/Frontend/RoadmapAI/src/views/LandingPage.css
+++ b/Frontend/RoadmapAI/src/views/LandingPage.css
@@ -106,6 +106,7 @@ img {
   align-items: center;
   padding: 60px 150px 60px 200px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  user-select: none;
 }
 
 .features-title .title {
@@ -117,6 +118,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  user-select: none;
 }
 
 .feature-card {
@@ -279,6 +281,7 @@ img {
   transition: transform 0.3s ease;
   display: inline-block;
   vertical-align: top;
+  user-select: none;
 }
 
 .step-cards:hover {
