--- a/Frontend/RoadmapAI/src/views/LandingPage.css
+++ b/Frontend/RoadmapAI/src/views/LandingPage.css
@@ -4,14 +4,14 @@
 
 .landing-page {
   min-height: 100vh;
-  
+
 }
 
-.roadmapImg{
+.roadmapImg {
   transition: transform 0.3s ease;
 }
 
-.roadmapImg:hover{
+.roadmapImg:hover {
   transform: translateY(-5px);
 }
 
@@ -19,7 +19,7 @@
 
 .rowPrompt {
   padding: 20px 150px 0px 200px;
-  background: linear-gradient( rgba(255,255,255,1) 65%, rgba(46,187,212,1) 100%);
+  background: linear-gradient(rgba(255, 255, 255, 1) 65%, rgba(46, 187, 212, 1) 100%);
   padding-bottom: 20px;
   padding-left: 50px;
 }
@@ -35,6 +35,17 @@ img {
   text-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);
 }
 
+.testimonial-title {
+  font-weight: 800;
+  font-size: 90px;
+  line-height: 80px;
+  text-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);
+}
+
+.testimonial-subtitle {
+  font-size: 20px;
+}
+
 .success {
   color: #00bcd4;
 }
@@ -42,6 +53,7 @@ img {
 .subtitle {
   font-size: 20px;
 }
+
 
 .search-container {
   display: flex;
@@ -102,7 +114,7 @@ img {
   background-color: #00bcd4;
   color: white;
   align-items: center;
-  padding: 60px 150px 60px 200px;
+  padding: 4% 12%;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
@@ -114,19 +126,15 @@ img {
 .features-cards {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
   user-select: none;
 }
 
-
-
 .feature-card {
-  display: flex;
-  align-items: center;
   background-color: white;
   border-radius: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-  padding: 20px;
+  padding: 3%;
   color: #333;
   margin-bottom: 10px;
   border: 2px solid #333;
@@ -136,23 +144,24 @@ img {
 .feature-icon {
   font-size: 30px;
   color: #fff;
-  margin-right: 15px;
   background: #00bcd4;
-  padding: 8px 20px 8px 20px;
+  margin: 3%;
+  padding: 10%;
   border-radius: 50%;
   border: 2px solid #333;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
 
-.feature-content{
+.feature-content {
   margin-left: 10px;
 }
 
 .feature-content h3 {
   font-size: 20px;
-  margin: 0;
+  margin-top: 10px;
   color: #00bcd4;
   font-weight: 800;
+
 }
 
 .feature-content p {
@@ -160,7 +169,7 @@ img {
   margin: 5px 0 0;
 }
 
-.how-it-works-title h1{
+.how-it-works-title h1 {
   font-size: 70px;
 }
 
@@ -220,19 +229,17 @@ img {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 20px;
-  
+
 }
 
 .dotted-line {
   width: 2px;
   height: 60px;
-  background: repeating-linear-gradient(
-    to bottom,
-    #00bcd4,
-    #00bcd4 4px,
-    transparent 4px,
-    transparent 8px
-  );
+  background: repeating-linear-gradient(to bottom,
+      #00bcd4,
+      #00bcd4 4px,
+      transparent 4px,
+      transparent 8px);
   margin-bottom: 20px;
 }
 
@@ -263,8 +270,10 @@ img {
 .rowSteps {
   display: flex;
   justify-content: space-between;
-  gap: 20px; /* Adds spacing between the cards */
-  padding: 40px 0; /* Padding around the row */
+  gap: 20px;
+  /* Adds spacing between the cards */
+  padding: 40px 0;
+  /* Padding around the row */
 }
 
 .step-cards {
@@ -274,7 +283,8 @@ img {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 30px;
   width: 100%;
-  max-width: 280px; /* Reduces the width of each card */
+  max-width: 280px;
+  /* Reduces the width of each card */
   margin: 10px;
   text-align: center;
   transition: transform 0.3s ease;
@@ -288,12 +298,12 @@ img {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
 
-.feature-card:hover{
+.feature-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
 
-.topic-button:hover{
+.topic-button:hover {
   transform: translateY(-5px);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
@@ -328,8 +338,10 @@ img {
 @media (max-width: 992px) {
   .rowSteps {
     flex-direction: column;
-    gap: 15px; /* Reduced gap for smaller screens */
+    gap: 15px;
+    /* Reduced gap for smaller screens */
   }
+
   .step-cards {
     width: 100%;
   }
@@ -361,42 +373,72 @@ img {
 }
 
 .custom-accordion .accordion-button {
-  background-color: #00bcd4; /* Custom background color */
-  color: white; /* Custom text color */
+  background-color: #00bcd4;
+  /* Custom background color */
+  color: white;
+  /* Custom text color */
   font-weight: bold;
   border-radius: 5px;
   transition: transform 0.3s ease;
 }
 
 .custom-accordion .accordion-button:not(.collapsed) {
-  background-color: #00bcd4; /* Darker shade when open */
+  background-color: #00bcd4;
+  /* Darker shade when open */
   transition: transform 0.3s ease;
 }
 
 .custom-accordion .accordion-item {
-  border: none; /* Remove default borders */
-  margin-bottom: 20px; /* Add spacing between items */
+  border: none;
+  /* Remove default borders */
+  margin-bottom: 20px;
+  /* Add spacing between items */
 }
 
 .custom-accordion .accordion-body {
-  background-color: #f8f9fa; /* Light background for the content */
-  padding: 20px; /* Add padding to accordion body */
+  background-color: #f8f9fa;
+  /* Light background for the content */
+  padding: 20px;
+  /* Add padding to accordion body */
   border-radius: 5px;
-  color: #333; /* Custom text color for body */
+  color: #333;
+  /* Custom text color for body */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.accordion-button:hover{
+.accordion-button:hover {
   transform: translateY(-5px);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
-.rowtestimonials{
+
+.rowTestimonials {
   background-color: #00bcd4;
   color: white;
   align-items: center;
-  padding: 0px 0px 0px 200px;
+  padding-left: 10%;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
+
+.testimonial-name h5 {
+  font-size: 2.5vh;
+  padding-top: 5%;
+  padding-left: 5%;
+  text-align: left;
+  font-weight: 700;
+}
+
+.testimonial-desc {
+  padding-top: 3%;
+  text-align: justify;
+  font-size: 2.3vh;
+}
+
+.testimonial-course {
+  text-align: left;
+  padding-left: 5%;
+  line-height: 5px;
+}
+
 
 .testimonials-carousel {
   height: 50vh;
@@ -407,14 +449,6 @@ img {
   overflow: hidden;
 }
 
-.carousel-track {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: auto;
-}
-
 .testimonial-icon {
   width: 17%;
   padding: 8px 8px 8px 8px;
@@ -422,42 +456,32 @@ img {
   border: 2px solid #00bcd4;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
-.testimonial-name h5{
-  font-size: 2.5vh;
-  padding-top: 5%;
-  padding-left: 5%;
-  text-align: left;
-  font-weight: 700;
-}
-.testimonial-course{
-  text-align: left;
-  padding-left: 5%;
-  line-height: 5px;
-}
-.testimonial-desc{
-  padding-top: 3%;
-  text-align: justify;
-  font-size: 2.3vh;
-}
 
 .testimonial-card {
   position: absolute;
   height: 60%;
-  margin: auto;
   transition: transform .4s ease, opacity .4s ease, z-index .4s ease;
   text-decoration: none;
   color: black;
-  
   background-color: #ffffff;
   border: 2px solid #333;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 30px;
+  padding: 2.5%;
   width: 50%;
   border-radius: 40px;
   text-align: center;
   display: inline-block;
   vertical-align: top;
+}
+
+.carousel-track {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+
 }
 
 .carousel-control {
@@ -478,3 +502,79 @@ img {
 }
 
 
+@media screen and (max-width: 768px) {
+  .feature-icon {
+    font-size: 10px;
+  }
+
+  .features-title .title {
+    font-size: 50px;
+  }
+
+  .feature-content h3 {
+    font-size: 18px;
+  }
+
+  .feature-content p {
+    font-size: 12px;
+  }
+
+
+}
+
+@media screen and (max-width: 480px) {
+  .feature-icon {
+    font-size: 15px;
+    padding: 15px 17px 15px 17px;
+    margin: 3%;
+  }
+
+  .features-title .title {
+    font-size: 40px;
+  }
+
+  .feature-content h3 {
+    font-size: 13px;
+  }
+
+  .feature-content p {
+    font-size: 9px;
+  }
+
+  .feature-card {
+    padding: 0%;
+  }
+
+  .testimonial-title {
+    font-size: 40px;
+  }
+
+  .testimonial-subtitle {
+    font-size: 16px;
+  }
+
+  .subtitle {
+    font-size: 16px;
+  }
+
+  .testimonial-card {
+    height: 55%;
+    margin-right: 7%;
+    width: 80%;
+  }
+  .testimonial-name h5 {
+    font-size: 2vh;
+    
+  }
+  
+  .testimonial-desc {
+    
+    font-size: 1.5vh;
+  }
+  
+  .testimonial-course{
+    font-size: 1.5vh;
+  }
+  
+
+}
