--- a/Frontend/RoadmapAI/src/views/LandingPage.css
+++ b/Frontend/RoadmapAI/src/views/LandingPage.css
@@ -58,7 +58,7 @@ img {
 
 .testimonial-title {
   font-weight: 800;
-  font-size: 500%;
+  font-size: 80px;
   line-height: 80px;
   text-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);
 }
@@ -570,7 +570,7 @@ img {
 .testimonial-name h5 {
   font-size: 2.5vh;
   padding-top: 5%;
-  padding-left: 5%;
+ 
   text-align: left;
   font-weight: 700;
 }
@@ -583,8 +583,9 @@ img {
 
 .testimonial-course {
   text-align: left;
-  padding-left: 5%;
+  font-size: 2.4vh;
   line-height: 5px;
+  margin-top: 15px;
 }
 
 
@@ -651,22 +652,135 @@ img {
 }
 
 
-@media screen and (max-width: 768px) {
-  
 
+@media screen and (max-width: 1425px) {
+  
   .features-title .title {
     font-size: 50px;
   }
-
   .feature-content h3 {
     font-size: 18px;
   }
-
   .feature-content p {
     font-size: 12px;
   }
+  .feature-card {
+    padding: 0%;
+  }
+  .subtitle {
+    font-size: 16px;
+  }
+  .testimonial-card {
+    height: 70%;
+    margin-right: 7%;
+    width: 50%;
+  }
+  .testimonial-name h5 {
+    font-size: 2.2vh;
+  }
+  .testimonial-desc {
+    font-size: 1.8vh;
+  }
+  .testimonial-course{
+    font-size: 2vh;
+  }
+  .testimonials-carousel{
+    height: 40vh;
+  }
+  .process-subtitle{
+    font-size: 16px;
+  }
+  .testimonial-title{
+    font-size: 60px;
+  }
+  .testimonial-subtitle{
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 1110px) {
+  
+  .features-title .title {
+    font-size: 50px;
+  }
+  .feature-content h3 {
+    font-size: 18px;
+  }
+  .feature-content p {
+    font-size: 12px;
+  }
+  .feature-card {
+    padding: 0%;
+  }
+  .subtitle {
+    font-size: 16px;
+  }
+  .testimonial-card {
+    padding: 2%;
+    height: 80%;
+    margin-right: 7%;
+    width: 50%;
 
+  }
+  .testimonial-name h5 {
+    font-size: 2vh;
+  }
+  .testimonial-desc {
+    font-size: 1.8vh;
+  }
+  .testimonial-course{
+    font-size: 1.2vh;
+  }
+  .testimonials-carousel{
+    height: 40vh;
+  }
+  .process-subtitle{
+    font-size: 16px;
+  }
+  .testimonial-title{
+    font-size: 40px;
+  }
+  .testimonial-subtitle{
+    font-size: 16px;
+  }
+}
 
+@media screen and (max-width: 790px) {
+  
+  .features-title .title {
+    font-size: 50px;
+  }
+  .feature-content h3 {
+    font-size: 18px;
+  }
+  .feature-content p {
+    font-size: 12px;
+  }
+  .feature-card {
+    padding: 0%;
+  }
+  .subtitle {
+    font-size: 16px;
+  }
+  .testimonial-card {
+    height: 90%;
+    margin-right: 7%;
+    width: 80%;
+  }
+  .testimonial-name h5 {
+    font-size: 2vh;
+  }
+  .testimonial-desc {
+    font-size: 1.5vh;
+  }
+  .testimonial-course{
+    font-size: 1.5vh;
+  }
+  .testimonials-carousel{
+    height: 40vh;
+  }
+  .process-subtitle{
+    font-size: 16px;
+  }
 }
 
 @media screen and (max-width: 480px) {
