--- a/Frontend/RoadmapAI/src/views/LandingPage.css
+++ b/Frontend/RoadmapAI/src/views/LandingPage.css
@@ -836,3 +836,47 @@ img {
 
 
 }
+
+/* Loading Modal */
+.loading-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  z-index: 9999;
+}
+
+.loader {
+  --c: no-repeat linear-gradient(#00bcd4 0 0);
+  background: var(--c), var(--c), var(--c),
+    var(--c), var(--c), var(--c),
+    var(--c), var(--c), var(--c);
+  background-size: 16px 16px;
+  animation: l32-1 1s infinite, l32-2 1s infinite;
+}
+
+@keyframes l32-1 {
+  0%, 100% {
+    width: 45px;
+    height: 45px;
+  }
+  35%, 65% {
+    width: 65px;
+    height: 65px;
+  }
+}
+
+@keyframes l32-2 {
+  0%, 40% {
+    background-position: 0 0, 0 50%, 0 100%, 50% 100%, 100% 100%, 100% 50%, 100% 0, 50% 0, 50% 50%;
+  }
+  60%, 100% {
+    background-position: 0 50%, 0 100%, 50% 100%, 100% 100%, 100% 50%, 100% 0, 50% 0, 0 0, 50% 50%;
+  }
+}
