--- a/Frontend/RoadmapAI/src/views/RoadmapPage.css
+++ b/Frontend/RoadmapAI/src/views/RoadmapPage.css
@@ -156,3 +156,142 @@ html, body, .landing-page {
     }
   }
   
+
+  .main-topic-title  h2{
+    font-weight: 800;
+    font-size: 70px;
+    text-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);
+  }
+
+  .main-topic-title {
+    text-align: center;
+    
+    font-weight: bold;
+    color: #333;
+    text-transform: uppercase;
+    border-bottom: 2px solid #30D6F3;
+    padding-bottom: 10px;
+
+    
+  }
+  
+  .roadmap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+  }
+  
+  .roadmap-step {
+    position: relative;
+    text-align: center;
+    margin-bottom: 20px;
+    width: 60%;
+    
+  }
+  
+  .step-box {
+    width: 100%;
+    /* border: 1px solid #ddd; */
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  
+  .step-box h4 {
+    margin-bottom: 10px;
+    color: #30D6F3;
+    font-weight: 600;
+  }
+  
+  .step-box p {
+    margin: 5px 0;
+    
+  }
+  
+  .step-box a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .step-box a:hover {
+    text-decoration: underline;
+  }
+  
+  .arrow {
+    font-size: 2rem;
+    color: #30D6F3;
+    margin: 10px 0;
+    align-items: center;
+    font-weight: bolder;
+  }
+
+  .topic{
+    background-color: #30D6F3;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    border-radius: 10px;
+    color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+  }
+  .topic:hover {
+    background-color: #2EBBD4;
+    transform: scale(1.05);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+  }
+
+  .link{
+    background-color: #126878;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 10px;
+    color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+  }
+  .link:hover {
+    background-color: #0d505c;
+    transform: scale(1.05);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+  }
+
+  .subtopics-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0;
+  }
+  
+  .subtopic-col {
+    background-color: #126878;
+    color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    flex: 1;
+    text-align: center;
+    
+    width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+  }
+  .subtopic-col:hover {
+    background-color: #0d505c;
+    transform: scale(1.05);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+  }
+
+  .separator {
+  font-size: 1.2rem;
+  color: #30D6F3;
+  font-weight: bolder;
+  margin: 0 10px;
+}
