--- a/Frontend/RoadmapAI/src/views/SignUpPage.css
+++ b/Frontend/RoadmapAI/src/views/SignUpPage.css
@@ -4,6 +4,18 @@ html, body, #app, .landing-page {
     margin: 0;
   }
 
+  @keyframes floating {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+  
   img.roadmapImg {
     border-radius: 10px;
     max-width: 100%;
@@ -12,7 +24,12 @@ html, body, #app, .landing-page {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    animation: floating 3s infinite ease-in-out; /* Looping animation */
+    transition: transform 0.3s ease;
   }
+  
+ 
+  
   
   .landing-page {
     min-height: 100vh;
